syntax = "proto3";

package notificacion;

service NotificacionService {
  rpc StreamNotificaciones (StreamNotificacionesRequest) returns (stream NotificacionResponse);
}

message StreamNotificacionesRequest {
  int32 usuarioId = 1;
}

message NotificacionResponse {
  int32 notificacionId = 1;
  string tipo = 2;
  string mensaje = 3;
  map<string, string> datosAdicionales = 4;
  string fecha = 5;
}